--- a/Main.xaml
+++ b/Main.xaml
@@ -35,6 +35,14 @@
       <x:String>UiPathTeam.Excel.Extensions.Activities</x:String>
       <x:String>System.Numerics</x:String>
       <x:String>UiPath.Shared.Activities</x:String>
+      <x:String>UiPath.UIAutomationCore.Contracts</x:String>
+      <x:String>UiPath.UIAutomationNext.Enums</x:String>
+      <x:String>UiPath.UIAutomationNext.Models</x:String>
+      <x:String>UiPath.UIAutomationNext.Activities</x:String>
+      <x:String>UiPath.Platform.ObjectLibrary</x:String>
+      <x:String>UiPath.Platform.SyncObjects</x:String>
+      <x:String>System.Management.Automation</x:String>
+      <x:String>System.Dynamic</x:String>
     </sco:Collection>
   </TextExpression.NamespacesForImplementation>
   <TextExpression.ReferencesForImplementation>
@@ -91,9 +99,14 @@
       <AssemblyReference>UiPathTeam.Excel.Extensions.Activities</AssemblyReference>
       <AssemblyReference>System.Runtime.Numerics</AssemblyReference>
       <AssemblyReference>UiPathTeam.ExcelUtility.Activities</AssemblyReference>
+      <AssemblyReference>UiPath.UIAutomationCore</AssemblyReference>
+      <AssemblyReference>UiPath.UIAutomationNext</AssemblyReference>
+      <AssemblyReference>UiPath.UIAutomationNext.Activities</AssemblyReference>
+      <AssemblyReference>UiPath.Platform</AssemblyReference>
+      <AssemblyReference>System.Management.Automation</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="Main Sequence" sap:VirtualizedContainerService.HintSize="663,3511" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="Main Sequence" sap:VirtualizedContainerService.HintSize="663,3973" sap2010:WorkflowViewState.IdRef="Sequence_12">
     <Sequence.Variables>
       <Variable x:TypeArguments="x:String" Name="sourcePath" />
       <Variable x:TypeArguments="x:String" Name="destinationFolder" />
@@ -143,8 +156,21 @@
           </ui:AssignOperation>
         </scg:List>
       </ui:MultipleAssign.AssignOperations>
+      <sap:WorkflowViewStateService.ViewState>
+        <scg:Dictionary x:TypeArguments="x:String, x:Object">
+          <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+          <x:Boolean x:Key="IsPinned">False</x:Boolean>
+        </scg:Dictionary>
+      </sap:WorkflowViewStateService.ViewState>
     </ui:MultipleAssign>
-    <ui:CopyFile ContinueOnError="{x:Null}" Destination="[newFilePath]" DisplayName="Copy File" sap:VirtualizedContainerService.HintSize="642,186" sap2010:WorkflowViewState.IdRef="CopyFile_1" Overwrite="True" Path="[sourcePath]" />
+    <ui:CopyFile ContinueOnError="{x:Null}" Destination="[newFilePath]" DisplayName="Copy File" sap:VirtualizedContainerService.HintSize="642,57" sap2010:WorkflowViewState.IdRef="CopyFile_1" Overwrite="True" Path="[sourcePath]">
+      <sap:WorkflowViewStateService.ViewState>
+        <scg:Dictionary x:TypeArguments="x:String, x:Object">
+          <x:Boolean x:Key="IsExpanded">False</x:Boolean>
+          <x:Boolean x:Key="IsPinned">False</x:Boolean>
+        </scg:Dictionary>
+      </sap:WorkflowViewStateService.ViewState>
+    </ui:CopyFile>
     <ui:CommentOut DisplayName="Comment Out" sap:VirtualizedContainerService.HintSize="642,57" sap2010:WorkflowViewState.IdRef="CommentOut_1">
       <ui:CommentOut.Body>
         <Sequence DisplayName="Ignored Activities" sap:VirtualizedContainerService.HintSize="450,226" sap2010:WorkflowViewState.IdRef="Sequence_11">
@@ -171,46 +197,30 @@
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
     </ui:CommentOut>
-    <ueab:ExcelProcessScopeX DisplayAlerts="{x:Null}" ExistingProcessAction="{x:Null}" FileConflictResolution="{x:Null}" LaunchMethod="{x:Null}" LaunchTimeout="{x:Null}" MacroSettings="{x:Null}" ProcessMode="{x:Null}" ShowExcelWindow="{x:Null}" DisplayName="Excel Process Scope" sap:VirtualizedContainerService.HintSize="642,3004" sap2010:WorkflowViewState.IdRef="ExcelProcessScopeX_2">
+    <ueab:ExcelProcessScopeX DisplayAlerts="{x:Null}" ExistingProcessAction="{x:Null}" FileConflictResolution="{x:Null}" LaunchMethod="{x:Null}" LaunchTimeout="{x:Null}" MacroSettings="{x:Null}" ProcessMode="{x:Null}" ShowExcelWindow="{x:Null}" DisplayName="Excel Prompt" sap:VirtualizedContainerService.HintSize="642,3595" sap2010:WorkflowViewState.IdRef="ExcelProcessScopeX_2">
       <ueab:ExcelProcessScopeX.Body>
         <ActivityAction x:TypeArguments="ui:IExcelProcess">
           <ActivityAction.Argument>
             <DelegateInArgument x:TypeArguments="ui:IExcelProcess" Name="ExcelProcessScopeTag" />
           </ActivityAction.Argument>
-          <Sequence DisplayName="Do" sap:VirtualizedContainerService.HintSize="608,2894" sap2010:WorkflowViewState.IdRef="Sequence_5">
+          <Sequence DisplayName="Do" sap:VirtualizedContainerService.HintSize="608,3445" sap2010:WorkflowViewState.IdRef="Sequence_5">
             <sap:WorkflowViewStateService.ViewState>
               <scg:Dictionary x:TypeArguments="x:String, x:Object">
                 <x:Boolean x:Key="IsExpanded">True</x:Boolean>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-            <ueab:ExcelApplicationCard Password="{x:Null}" ReadFormatting="{x:Null}" SensitivityLabel="{x:Null}" CreateNewFile="False" DisplayName="Use Excel File" sap:VirtualizedContainerService.HintSize="574,2834" sap2010:WorkflowViewState.IdRef="ExcelApplicationCard_1" ResizeWindow="None" SensitivityOperation="None" WorkbookPath="[newFilePath]">
+            <ueab:ExcelApplicationCard Password="{x:Null}" ReadFormatting="{x:Null}" SensitivityLabel="{x:Null}" CreateNewFile="False" DisplayName="Use Excel File" sap:VirtualizedContainerService.HintSize="574,3385" sap2010:WorkflowViewState.IdRef="ExcelApplicationCard_1" ResizeWindow="None" SensitivityOperation="None" WorkbookPath="[newFilePath]">
               <ueab:ExcelApplicationCard.Body>
                 <ActivityAction x:TypeArguments="ue:IWorkbookQuickHandle">
                   <ActivityAction.Argument>
                     <DelegateInArgument x:TypeArguments="ue:IWorkbookQuickHandle" Name="ExcelSource" />
                   </ActivityAction.Argument>
-                  <Sequence DisplayName="Do" sap:VirtualizedContainerService.HintSize="540,2542" sap2010:WorkflowViewState.IdRef="Sequence_4">
+                  <Sequence DisplayName="Do" sap:VirtualizedContainerService.HintSize="540,3093" sap2010:WorkflowViewState.IdRef="Sequence_4">
                     <Sequence.Variables>
-                      <Variable x:TypeArguments="x:Int32" Name="counter">
-                        <Variable.Default>
-                          <Literal x:TypeArguments="x:Int32" Value="1" />
-                        </Variable.Default>
-                      </Variable>
-                      <Variable x:TypeArguments="x:Int32" Name="maxItems">
-                        <Variable.Default>
-                          <Literal x:TypeArguments="x:Int32" Value="12" />
-                        </Variable.Default>
-                      </Variable>
-                      <Variable x:TypeArguments="x:Boolean" Name="exitLoop">
-                        <Variable.Default>
-                          <Literal x:TypeArguments="x:Boolean" />
-                        </Variable.Default>
-                      </Variable>
-                      <Variable x:TypeArguments="x:Int32" Name="startingRow">
-                        <Variable.Default>
-                          <Literal x:TypeArguments="x:Int32" Value="10" />
-                        </Variable.Default>
-                      </Variable>
+                      <Variable x:TypeArguments="x:Int32" Default="1" Name="counter" />
+                      <Variable x:TypeArguments="x:Int32" Default="12" Name="maxItems" />
+                      <Variable x:TypeArguments="x:Boolean" Default="False" Name="exitLoop" />
+                      <Variable x:TypeArguments="x:Int32" Default="10" Name="startingRow" />
                       <Variable x:TypeArguments="x:String" Name="userItem" />
                       <Variable x:TypeArguments="x:String" Name="requestedBy" />
                     </Sequence.Variables>
@@ -242,10 +252,10 @@
                         </scg:Dictionary>
                       </sap:WorkflowViewStateService.ViewState>
                     </ui:InputDialog>
-                    <ueab:WriteCellX Cell="[Excelsource.Sheet(&quot;PR_Template&quot;).Cell(&quot;B7&quot;)]" DisplayName="Write Date" sap:VirtualizedContainerService.HintSize="506,57" sap2010:WorkflowViewState.IdRef="WriteCellX_4" Value="[date.Now.ToString(&quot;mm-dd-yyyy&quot;)]">
+                    <ueab:WriteCellX Cell="[Excelsource.Sheet(&quot;PR_Template&quot;).Cell(&quot;B7&quot;)]" DisplayName="Write Date" sap:VirtualizedContainerService.HintSize="506,191" sap2010:WorkflowViewState.IdRef="WriteCellX_4" Value="[DateTime.Now.ToString(&quot;MM/dd/yyyy&quot;)]">
                       <sap:WorkflowViewStateService.ViewState>
                         <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                          <x:Boolean x:Key="IsExpanded">False</x:Boolean>
+                          <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                           <x:Boolean x:Key="IsPinned">False</x:Boolean>
                         </scg:Dictionary>
                       </sap:WorkflowViewStateService.ViewState>
@@ -266,11 +276,11 @@
                         </scg:Dictionary>
                       </sap:WorkflowViewStateService.ViewState>
                     </ueab:WriteCellX>
-                    <ui:InterruptibleWhile CurrentIndex="{x:Null}" DisplayName="While" sap:VirtualizedContainerService.HintSize="506,2149" sap2010:WorkflowViewState.IdRef="InterruptibleWhile_1">
+                    <ui:InterruptibleWhile CurrentIndex="{x:Null}" Condition="[(counter &lt;= maxItems AndAlso Not exitLoop)]" DisplayName="While" sap:VirtualizedContainerService.HintSize="506,2149" sap2010:WorkflowViewState.IdRef="InterruptibleWhile_1">
                       <ui:InterruptibleWhile.Body>
                         <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="504,2019" sap2010:WorkflowViewState.IdRef="Sequence_6">
                           <Sequence.Variables>
-                            <Variable x:TypeArguments="x:Int32" Name="userQty" />
+                            <Variable x:TypeArguments="x:String" Name="userQty" />
                             <Variable x:TypeArguments="x:String" Name="userUnit" />
                           </Sequence.Variables>
                           <sap:WorkflowViewStateService.ViewState>
@@ -283,9 +293,9 @@
                               <OutArgument x:TypeArguments="x:String">[userItem]</OutArgument>
                             </ui:InputDialog.Result>
                           </ui:InputDialog>
-                          <ui:InputDialog Options="{x:Null}" OptionsString="{x:Null}" DisplayName="Input Dialog" sap:VirtualizedContainerService.HintSize="470,271" sap2010:WorkflowViewState.IdRef="InputDialog_5" IsPassword="False" Label="0" Title="[&quot;Enter Quantity #&quot; + counter.ToString]">
+                          <ui:InputDialog Label="{x:Null}" Options="{x:Null}" OptionsString="{x:Null}" DisplayName="Input Dialog" sap:VirtualizedContainerService.HintSize="470,271" sap2010:WorkflowViewState.IdRef="InputDialog_5" IsPassword="False" Title="[&quot;Enter Quantity #&quot; + counter.ToString]">
                             <ui:InputDialog.Result>
-                              <OutArgument x:TypeArguments="x:Int32">[userQty]</OutArgument>
+                              <OutArgument x:TypeArguments="x:String">[userQty]</OutArgument>
                             </ui:InputDialog.Result>
                           </ui:InputDialog>
                           <ui:InputDialog Label="{x:Null}" Options="{x:Null}" OptionsString="{x:Null}" DisplayName="Input Dialog" sap:VirtualizedContainerService.HintSize="470,271" sap2010:WorkflowViewState.IdRef="InputDialog_6" IsPassword="False" Title="[&quot;Enter Unit #&quot; + counter.ToString]">
@@ -293,7 +303,7 @@
                               <OutArgument x:TypeArguments="x:String">[userUnit]</OutArgument>
                             </ui:InputDialog.Result>
                           </ui:InputDialog>
-                          <If Condition="[String.IsNullOrWhiteSpace(userItem) OrElse userQty &lt;= 0 Or String.IsNullOrWhiteSpace(userUnit)]" sap:VirtualizedContainerService.HintSize="470,1146" sap2010:WorkflowViewState.IdRef="If_1">
+                          <If Condition="[String.IsNullOrWhiteSpace(userItem) OrElse String.IsNullOrWhiteSpace(userQty) Or String.IsNullOrWhiteSpace(userUnit)]" sap:VirtualizedContainerService.HintSize="470,1146" sap2010:WorkflowViewState.IdRef="If_1">
                             <sap:WorkflowViewStateService.ViewState>
                               <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                 <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -352,9 +362,6 @@
                           </If>
                         </Sequence>
                       </ui:InterruptibleWhile.Body>
-                      <ui:InterruptibleWhile.Condition>
-                        <VisualBasicValue x:TypeArguments="x:Boolean" DisplayName="Visual basic value" ExpressionText="(counter &lt;= maxItems AndAlso Not exitLoop)" />
-                      </ui:InterruptibleWhile.Condition>
                       <sap:WorkflowViewStateService.ViewState>
                         <scg:Dictionary x:TypeArguments="x:String, x:Object">
                           <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -362,10 +369,10 @@
                         </scg:Dictionary>
                       </sap:WorkflowViewStateService.ViewState>
                     </ui:InterruptibleWhile>
-                    <If Condition="[counter &gt; maxItems]" sap:VirtualizedContainerService.HintSize="506,48" sap2010:WorkflowViewState.IdRef="If_2">
+                    <If Condition="[counter &gt; maxItems]" sap:VirtualizedContainerService.HintSize="506,465" sap2010:WorkflowViewState.IdRef="If_2">
                       <sap:WorkflowViewStateService.ViewState>
                         <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                          <x:Boolean x:Key="IsExpanded">False</x:Boolean>
+                          <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                           <x:Boolean x:Key="IsPinned">False</x:Boolean>
                         </scg:Dictionary>
                       </sap:WorkflowViewStateService.ViewState>
@@ -403,6 +410,12 @@
           </Sequence>
         </ActivityAction>
       </ueab:ExcelProcessScopeX.Body>
+      <sap:WorkflowViewStateService.ViewState>
+        <scg:Dictionary x:TypeArguments="x:String, x:Object">
+          <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+          <x:Boolean x:Key="IsPinned">False</x:Boolean>
+        </scg:Dictionary>
+      </sap:WorkflowViewStateService.ViewState>
     </ueab:ExcelProcessScopeX>
   </Sequence>
 </Activity>
